objects/Proactive_Demographics__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Middle_Initial__c</fullName>
        <label>Contact Middle Initial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship__c</fullName>
        <label>Contact Relationship</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Resident__c</fullName>
        <label>DC Resident</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ELL_Status__c</fullName>
        <label>ELL Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Code__c</fullName>
        <label>Entry Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Code__c</fullName>
        <label>Exit Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exit_Date__c</fullName>
        <label>Exit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Student First Name</description>
        <inlineHelpText>Student First Name</inlineHelpText>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Student Gender</description>
        <label>Gender</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Homeroom__c</fullName>
        <label>Homeroom</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immigrant__c</fullName>
        <label>Immigrant</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Student Last Name</description>
        <inlineHelpText>Student Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Initial__c</fullName>
        <label>Middle Initial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Graduation_Year__c</fullName>
        <label>Original Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPED_Hours__c</fullName>
        <label>SPED Hours</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPED_Level__c</fullName>
        <label>SPED Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPED_School__c</fullName>
        <label>SPED School</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <label>School Year</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Education__c</fullName>
        <label>Special Education</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <label>Teacher</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title1_Status__c</fullName>
        <label>Title 1 Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USI_ID__c</fullName>
        <externalId>true</externalId>
        <label>USI ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Proactive Demographics</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proactive Demographics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>